--- a/docs/isbi2017/ISBI2017_fmri_anand.lyx
+++ b/docs/isbi2017/ISBI2017_fmri_anand.lyx
@@ -24,7 +24,7 @@
 %
 % Single address.
 % ---------------
-\name{Anand A Joshi, Gaurav Sonkar, Minqi Chong and Richard M Leahy\thanks{This project is funded by NIH R01.}}
+\name{Anand A Joshi, Minqi Chong, Jian Li, Gaurav Sonkar and Richard M Leahy\thanks{This project is funded by NIH R01.}}
 \address{Signal and Image Processing Institute, University of Southern California, Los Angeles}
 %
 % For example:
@@ -125,6 +125,15 @@ Which connectivity measure is best for fMRI based cortical clustering?
 \end_layout
 
 \begin_layout Abstract
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+[TBD] 
+\end_layout
+
+\end_inset
+
 Resting state fMRI (rsfMRI) provides complementary information to the sulcal
  brain anatomy about the cytoarchitecture and function of the human brain
  and therefore parcellation based on rsfMRI is becoming increasingly popular.
@@ -152,15 +161,125 @@ name "sec:intro"
 
 \end_inset
 
-
+ 
 \end_layout
 
 \begin_layout Standard
-These guidelines include complete descriptions of the fonts, spacing, and
- related information for producing your proceedings manuscripts.
+Studies of cortical connectivity derived from in-vivo imaging based on correlati
+on in the functional magnetic resonance imaging (fMRI) signal is becoming
+ increasingly popular for human connectome analysis.
+ The correlation between fMRI BOLD signal between different regions in the
+ brain is often used as a measure of connectivity between those regions.
+ This large scale connectivity information derived from fMRI can be used
+ to identify cyto-architectonic boundaries between functionally-connected
+ regions 
 \begin_inset CommandInset citation
 LatexCommand cite
-key "Alred03"
+key "biswal1995functional"
+
+\end_inset
+
+.
+ Identification of contiguous areas of cortex that exhibit similar connectivity
+ to the rest of the brain can be used to perform a functional parcellation
+ of the cortex 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "raichle2001default,sporns2005human,rousseeuw1987silhouettes,smith2013functional,eickhoff2005new"
+
+\end_inset
+
+.
+ These application require pairwise connectivity measure between every pair
+ of points on the cortical surface.
+ Most of the existing methods on fMRI based brain connectivity use correlation
+ in fMRI signals as a measures of connectivity.
+ 
+\end_layout
+
+\begin_layout Standard
+The performance of cortical clustering algorithms and connectivity studies
+ is critically dependent on the choice of the connectivity measure.
+ Limited data available for a single individual scan can result in instability
+ of the estimated cyto-architectonic boundaries and parcellations (
+\begin_inset CommandInset citation
+LatexCommand cite
+key "rubinov2010complex,smith2011network"
+
+\end_inset
+
+.
+ A large number of network estimation methods have been used in the neuroimaging
+ literature ranging from simple measures that consider correlation between
+ two nodes' timeseries, ICA based methods to more sophisticated approaches
+ that consider the whole cortex simultaneously and estimate a global Bayes
+ net models 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "smith2011network"
+
+\end_inset
+
+.
+ However, most neuroimaging studies use correlation and derived measures
+ as a measure of connectivity and therefore, it is important to perform
+ comparison of the correlation based connectivity measures and assess their
+ performance.
+\end_layout
+
+\begin_layout Standard
+This paper proposes a new geodesic distance connectivity measure.
+ We also analyze various know correlation based connectivity measures and
+ relationships between them.
+ Specifically, we compare (1) geodesic distance (proposed), (2) connectivity-bas
+ed distance, (3) exponential kernel distance and (4) Euclidean or 
+\begin_inset Formula $L^{2}$
+\end_inset
+
+ distance measures.
+ This paper also presents a relative the performance assessment of these
+ measures for a cortical parcellation application.
+ In order to compare the performance of these measures, we analyzed cross
+ subject consistency and cross session consistency of the parcellation generated
+ using these measures using two algorithms (1) region growing and (2) spectral
+ clustering 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "thirion2014fmri"
+
+\end_inset
+
+.
+ We also analyze the impact of number of samples on the performance of cortical
+ parcellation for these four measures.
+\end_layout
+
+\begin_layout Standard
+In the following sections, the four connectivity measures are described
+ first.
+ Then the relationships between them is analyzed followed by the description
+ of the performance analysis studies.
+ Next, in the results section, the numerical results for these studies are
+ presented.
+ Finally, in the conclusion section, we summarize the findings of these
+ studies.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+* Lit Survey
+\end_layout
+
+\begin_layout Plain Layout
+* Motivation
+\end_layout
+
+\begin_layout Plain Layout
+* Outline
+\end_layout
 
 \end_inset
 
@@ -172,25 +291,11 @@ Materials and Methods
 \end_layout
 
 \begin_layout Standard
-We separately consider each anatomical region in the cortex and subdivide
- them based on the resting fMRI time-series.
- As an input, we assume preprocessed rsfMRI data from HCP that is also processed
- using tNLM filtering.
- First, we select an anatomical ROI for which we want subparcellation.
- Then the mean was removed and variance normalized for each time series
- in the data to 1.
- This similarity measure is used to compute similarity matrix between every
- pair of nodes in the selected ROI.
- The similarity matrix is then inputted to the spectral clustering algorithm.
- The optimal number of clusters is selected based on Silhouette Score [1].
- Once the parcellation is done, the color coded maps of cross subject consistenc
-y were generated.
- Additionally, we also generated connectivity maps from centroid of each
- cluster to the whole brain by computing correlations of time series.
+correlations of time series.
 \end_layout
 
 \begin_layout Subsection
-Geodesic distance 
+Geodesic Distance 
 \end_layout
 
 \begin_layout Standard
@@ -207,31 +312,72 @@ Since we assume that the input time series as variance normalized to 1,
  and therefore a measure of similarity can be defined as sin^(-1).
 \end_layout
 
+\begin_layout Standard
+Is a real distance.
+\end_layout
+
 \begin_layout Subsection
-Connectivity based distance
+Connectivity-based Distance
 \end_layout
 
 \begin_layout Standard
 Connectivity of a given signal to the rest of the brain can be computed
- by measuring correlation 
+ by measuring correlation of each voxel to the rest of the brain.
+ Efficient way for computing correlation of correlation.
+\end_layout
+
+\begin_layout Standard
+Not a real distance
 \end_layout
 
 \begin_layout Subsection
-Exponential function
+Exponential Kernel Distance 
+\end_layout
+
+\begin_layout Standard
+Not a real distance.
 \end_layout
 
 \begin_layout Subsection
 \begin_inset Formula $L^{2}$
 \end_inset
 
- distance
+ Distance
+\end_layout
+
+\begin_layout Standard
+We can consider the usual 
+\begin_inset Formula $L^{2}$
+\end_inset
+
+ distance between two vectors representing time series as a metric between
+ the two.
+ 
+\begin_inset Formula 
+\begin{align*}
+d_{L^{2}}(X,Y) & =\|X-Y\|^{2}\\
+= & \|X\|^{2}+\|Y\|^{2}-2\rho_{XY}\\
+= & 2-2\rho_{XY}
+\end{align*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Is a real distance.
+\end_layout
+
+\begin_layout Subsection
+Comparison of the Measures
 \end_layout
 
 \begin_layout Standard
 \begin_inset Float figure
 wide true
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -263,17 +409,130 @@ status collapsed
 
 \end_layout
 
+\begin_layout Itemize
+Compare theoretical properties Show that correlation of correlation is square
+ of correlation.
+ Homogeneity, triangle inequalities are important in connectivity analysis.
+ Correlation of correlation has memory issues and does not yield extra informati
+on
+\end_layout
+
+\begin_layout Itemize
+Which are distance metric and which are not 
+\end_layout
+
+\begin_layout Subsection
+Clustering Method
+\end_layout
+
+\begin_layout Standard
+We separately consider each anatomical region in the cortex and subdivide
+ them based on the resting fMRI time-series.
+ Specifically, (1) Precuneus (PC) (2) Cingulate Gyrus (CG), (3) Middle Frontal
+ Gyrus (MFG), (4) Middle Temporal Gyrus (MTG) from the BCI_DNI_brain atlas
+ (described at 
+\begin_inset Flex URL
+status open
+
+\begin_layout Plain Layout
+
+http://brainsuite.org/svreg_atlas_description
+\end_layout
+
+\end_inset
+
+) from BrainSuite software.
+ As an input, we assume preprocessed rsfMRI data from HCP that is also processed
+ using tNLM filtering 
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+say a few words about tNLM filtering
+\end_layout
+
+\end_inset
+
+.
+ First, we select an anatomical ROI for which we want subparcellation.
+ Then the mean was removed and variance normalized for each time series
+ in the data to 1.
+ This similarity measure is used to compute similarity matrix between every
+ pair of nodes in the selected ROI.
+ The similarity matrix is then inputted to the spectral clustering algorithm.
+ The optimal number of clusters is selected based on Silhouette Score 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "rousseeuw1987silhouettes"
+
+\end_inset
+
+.
+ Once the parcellation is done, the color coded maps of cross subject consistenc
+y were generated.
+ Additionally, we also generated connectivity maps from centroid of each
+ cluster to the whole brain by computing 
+\end_layout
+
+\begin_layout Itemize
+We compare using two clustering algorithms 1) spectral clustering, 2) region
+ growing 
+\end_layout
+
+\begin_layout Itemize
+Cross subject and cross session consistency analysis
+\end_layout
+
+\begin_layout Itemize
+Consistency with subsampled data
+\end_layout
+
+\begin_layout Subsection
+Data
+\end_layout
+
+\begin_layout Standard
+We removed mean normalized by variance 100 subjects and 4 sessions.
+ we used minimal processed data [borrow from Minqi's paper].
+\end_layout
+
 \begin_layout Section
 Results
 \end_layout
 
 \begin_layout Standard
 We analyzed the data from HCP dataset for 100 subjects filtered using tNLM
- [3] filtering.
+ 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "bhushan2016temporal"
+
+\end_inset
+
+ filtering.
  In this paper we present the subdivision for precuneus and cingulate based
  on functional connectivity from resting fMRI state.
  The optimal number of cluster based on silhouette analysis shows that there
  are 3 subdivisions of precuneus and 3 subdivisions of cingulate.
+\end_layout
+
+\begin_layout Itemize
+We compare using two clustering algorithms 1) spectral clustering, 2) region
+ growing.
+ Figures and results here.
+\end_layout
+
+\begin_layout Itemize
+Cross subject and cross session consistency analysis
+\end_layout
+
+\begin_layout Itemize
+Consistency with subsampled data
+\end_layout
+
+\begin_layout Itemize
+Show brain figure showing modulated plot of labels for across session.
+ TODO make a figure with all ROIs
 \end_layout
 
 \begin_layout Standard
@@ -281,10 +540,6 @@ We analyzed the data from HCP dataset for 100 subjects filtered using tNLM
 wide true
 sideways false
 status collapsed
-
-\begin_layout Plain Layout
-
-\end_layout
 
 \begin_layout Plain Layout
 \align center
@@ -322,10 +577,6 @@ placement L
 overhang 0in
 width "50col%"
 status open
-
-\begin_layout Plain Layout
-
-\end_layout
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -369,10 +620,20 @@ Figure showing subdivisions
 
 \end_layout
 
+\begin_layout Section
+Conclusion
+\end_layout
+
+\begin_layout Standard
+Ours is the best method.
+ Correlation of correlation does not give more information that the original
+ time series 
+\end_layout
+
 \begin_layout Standard
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
-bibfiles "report"
+bibfiles "fmri_bib"
 options "IEEEbib"
 
 \end_inset
